--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
      with:
       ndk-version: r10e
       add-to-path: false
-   - run: ./build noomp release
+   - run: ./build noomp debug
      env:
       ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
    - name: Upload artifacts
