--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,3 +34,8 @@ jobs:
      with:
           name: Android
           path: libs/armeabi-v7a/libclient_hardfp.so
+   - name: Upload artifacts
+     uses: actions/upload-artifact@v2
+     with:
+          name: Android
+          path: libs/armeabi-v7a/libyapb_hardfp.so
