--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
    - run: |
            sudo dpkg --add-architecture i386
            sudo apt update
-           sudo apt install gcc-multilib g++-multilib gcc:i386 -y
+           sudo apt install build-essential gcc-multilib g++-multilib gcc-11:i386 -y
            ./build
      env:
       ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
