--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,7 +36,7 @@ jobs:
      with:
           name: Android
           path: libs/armeabi-v7a/libclient_hardfp.so
-   - name: Upload artifacts
+   - name: Upload artifacts2
      uses: actions/upload-artifact@v2
      with:
           name: Android
