--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,9 +35,4 @@ jobs:
      uses: actions/upload-artifact@v2
      with:
           name: Android
-          path: libs/armeabi-v7a/libclient_hardfp.so
-   - name: Upload artifacts2
-     uses: actions/upload-artifact@v2
-     with:
-          name: Android
-          path: libs/armeabi-v7a/libyapb_hardfp.so
+          path: bin/*
