--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,7 @@ jobs:
       add-to-path: false
    - run: |
            sudo apt install openjdk-8-jdk openjdk-8-jre ant-contrib python3-requests python3-pip build-essential gcc-multilib g++-multilib gcc g++ -y
+           sudo chmod 777 build-apk.sh
            ./build-apk.sh debug noomp
      env:
       ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
