--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="in.celest.xash3d.cs16client"
+      package="in.celest.xash3d.wg16client"
       android:versionCode="520"
-      android:versionName="1.33">
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"/>
+      android:versionName="1.2">
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="24"/>
     <application android:label="@string/app_name"
                  android:debuggable="false"
                  android:icon="@drawable/ic_launcher">
