--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,14 +27,12 @@ jobs:
       ndk-version: r10e
       add-to-path: false
    - run: |
-           sudo apt install openjdk-8-jdk openjdk-8-jre ant-contrib python3-requests python3-pip build-essential gcc-multilib g++-multilib gcc g++ -y
-           sudo chmod 777 build-apk.sh
-           git clone --depth 1 https://gitlab.com/LostGamer/android-sdk
-           ./build-apk.sh debug noomp
+           sudo apt install build-essential gcc-multilib g++-multilib gcc g++ -y
+           ./build
      env:
       ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
    - name: Upload artifacts
      uses: actions/upload-artifact@v2
      with:
           name: Android
-          path: bin/*
+          path: libs/
