YaPB: Update Resources

--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/chatter.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/chatter.cfg
@@ -1,9 +1,11 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
-//
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+;
+; @package: YaPB
+; @version: 4.0
+; @author: YaPB Development Team
+; @filename: chatter.cfg
+; 
+; Configuration file contains chatter definitions for bots.
+;
 
 RewritePath sound/radio/bot
 
@@ -75,3 +77,8 @@ Event Chatter_GoingToGuardHostages = ("camping_hostages", "im_going_to_camp_the_
 Event Chatter_GoingToGuardDoppedBomb = ("im_going_to_guard_the_bomb", "im_going_to_guard_the_bomb2", "im_going_to_keep_an_eye_on_the_bomb", "im_going_to_watch_the_bomb");
 Event Chatter_OnMyWay = ("on_my_way", "on_my_way2", "im_coming", "hang_on_im_coming", "be_right_there");
 Event Chatter_LeadOnSir = ("lead_on_sir", "lead_the_way_sir", "lead_the_way", "ok_sir_lets_go", "lead_on_commander", "lead_the_way_commander", "ok_cmdr_lets_go");
+Event Chatter_Pinned_Down = ("they_got_me_pinned_down_here", "im_pinned_down");
+Event Chatter_GottaFindTheBomb = ("theres_the_bomb", "theres_the_bomb2");
+Event Chatter_Lost_The_Commander = ("weve_lost_the_commander", "the_commander_is_down", "the_commander_is_down_repeat");
+Event Chatter_CoverMe = ("cover_me", "cover_me2");
+Event Chatter_BombSiteSecured = ("i_wasnt_worried_for_a_minute", "that_was_a_close_one", "well_done", "whew_that_was_close");
