--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/de_lang.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/de_lang.cfg
@@ -1,9 +1,11 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
-//
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+;
+; @package: YaPB
+; @version: 4.0
+; @author: YaPB Development Team
+; @filename: de_lang.cfg
+; 
+; Configuration file contains German translation for bots menus and messages.
+;
 
 [ORIGINAL]
 \yMain Menu\w
@@ -133,7 +135,7 @@
 2. Average
 3. Normal
 4. Professional
-5. Godlike
+5. Expert
 
 0. Exit
 
@@ -811,7 +813,7 @@ Es gibt keinen Pfad zu diesem Wegpunkt
 Cached waypoint cleared (nearby point not found in 50 units range)
 
 [TRANSLATED]
-Temorärer Wegpunkt geloescht (kein Punkt gefunden innerhalb 50 Einheiten Entfernung)
+Temorï¿½rer Wegpunkt geloescht (kein Punkt gefunden innerhalb 50 Einheiten Entfernung)
 
 [ORIGINAL]
 Waypoint #%d has been put into memory
