--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/en_chat.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/en_chat.cfg
@@ -1,9 +1,11 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
-//
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+;
+; @package: YaPB
+; @version: 4.0
+; @author: YaPB Development Team
+; @filename: en_chat.cfg
+; 
+; Configuration file contains English translation for bot chats.
+;
 
 [BOMBPLANT]
 Jeeesuzzz Christ, not again!
@@ -49,7 +51,7 @@ Sorry %v, my Headshot Script is better than yours.
 [WELCOME]
 Hi guys :)
 Wazzzzup?
-My god, i see there are many cheaters on this server...
+i see there are many cheaters on this server...
 //
 //
 //
