--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/yapb.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/yapb.cfg
@@ -1,274 +1,423 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
 //
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+// @package: YaPB
+// @version: 4.0
+// @author: YaPB Development Team
+// @filename: yapb.cfg
+// 
+// YaPB main configuration file. Can be executed via "exec" command.
+//
 
 //
-// Display's additional debug information about bot, when you spectating him.
-//
-// Default: 0
-//
+// Enables or disables useful messages about bot states. Not required for end users.
+// ---
+// Default: "0", Min: "0", Max: "4"
+// 
 yb_debug "0"
 
 //
-// Forces all bots to move to specified here goal.
-//
-// Default: -1
-//
+// Forces all alive bots to build path and go to the specified here graph node.
+// ---
+// Default: "-1", Min: "-1", Max: "2048"
+// 
 yb_debug_goal "-1"
 
 //
-// Chance that bot will autofollow human-commander in start of each round.
-//
-// Default: 20
-//
+// Specifies the percent of bots, than can follow leader on each round start.
+// ---
+// Default: "20", Min: "0", Max: "100"
+// 
 yb_user_follow_percent "20"
 
 //
-// Maximum number of bots, that can follow human-commander each round.
-//
-// Default: 1
-//
+// Specifies how many bots can follow a single user.
+// ---
+// Default: "1", Min: "0", Max: "16"
+// 
 yb_user_max_followers "1"
 
 //
-// Forces all bot's to play only with knives.
-//
-// Default: 0
-//
+// If enabled, all bots will be forced only the knife, skipping weapon buying routines.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
 yb_jasonmode "0"
 
 //
-// Select's bot's radio-chatter-communication types.
-//
-// Allowed values:
-//   0 - Radio & Chatter Disabled.
-//   1 - Only Radio Enabled.
-//   2 - Chatter & Radio Enabled.
-//
-// Default: 2
-yb_communication_type "2"
+// Allows bots to use radio or chattter.
+//  Allowed values: '0', '1', '2'.
+//  If '0', radio and chatter is disabled.
+//  If '1', only radio allowed.
+//  If '2' chatter and radio allowed.
+// ---
+// Default: "2", Min: "0", Max: "2"
+// 
+yb_radio_mode "2"
 
 //
-// Enables bot's economics rounds. See general.cfg for more info.
-//
-// Default: 1
-//
+// Specifies whether bots able to use team economics, like do not buy any weapons for whole team to keep money for better guns.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_economics_rounds "1"
 
 //
-// Enables or disables bot's ability to move silently, if they hears enemy.
-//
-// Default: 1
-//
+// Specifies whether bots able to use 'shift' if they thinks that enemy is near.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_walking_allowed "1"
 
 //
-// Forces bot to punish teammate, that shooting him. This also forces bots to vote for kick against his tk'ing teammate.
+// Allows or disallows bots to camp. Doesn't affects bomb/hostage defending tasks
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_camping_allowed "1"
+
 //
-// Default "1"
-//
+// Allows or disallows bots to take revenge of teamkillers / team attacks.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_tkpunish "1"
 
 //
-// Bot's do nothings, and stays at spawn.
-//
-// Default: 0
-//
+// If enabled the bots think function is disabled, so bots will not move anywhere from their spawn spots.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
 yb_freeze_bots "0"
 
 //
-// Allows or disallows bot's to do spraypaints.
-//
-// Default: 1
-//
+// Allows or disallows the use of spay paints.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_spraypaints "1"
 
 //
-// Allows or disallows bots ability to buy weapons.
-//
-// Default: 1
-//
+// Allows or disallows bots weapon buying routines.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_botbuy "1"
 
+//
+// Allows bots to destroy breakables around him, even without touching with them.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_destroy_breakables_around "1"
 
 //
-// Path to chatter, by default points to chatter from Official CSBot
-//
-// Default: sound/radio/bot
-//
+// Specifies the paths for the bot chatter sound files.
+// ---
+// Default: "sound/radio/bot"
+// 
 yb_chatter_path "sound/radio/bot"
 
 //
-// Weapons that bot unable to buy in any situations. Priority of this cvar higher, than the data specified in general.cfg
-//
-// Default: 
-//
-yb_restricted_weapons ""
-
-//
-// Allows or disallows bot's shooting through walls at enemies.
-//
-// Default: 2
-//
-yb_shoots_thru_walls "2"
-
-//
-// When enabled, bot's will ignore any enemies on the way, but will do their goals.
-//
-// Default: 0
-//
-yb_ignore_enemies "0"
-
-
-//
-// Only used with CSDM mod, and selects whether CSDM is active. This cvar automatically configured by bot.
-// No need to edit manually in most cases.
-//
-// Available values:
-//  0 - Disabled CSDM.
-//  1 - CSDM Active.
-//  2 - CSDM Active with FFA mode.
-//
-yb_csdm_mode "0"
-
-//
-// Kick bots to automatically make room for human players.
-//
-// Default: 1
-//
-yb_autovacate "0"
-
-//
-// Adds this number of bots per human users.
-//
-// Default: 0
-//
-yb_quota_match "0"
-
-//
-// Total maximum bots can be added by yb_quota_match, only effective when yb_quota_match non-zero.
-//
-// Default: 0
-//
-yb_quota_match_max "0"
-
-//
-// Bot's will join the game, only one alive human already joined team.
-//
-// Default: 0
-//
-yb_join_after_player "0"
-
-//
-// Forces bot's to join specific team.
-//
-// Available values:
-//   any - Bot's will join both teams.
-//   ct - Bot's will join only CT team.
-//   te - Bot's will join only T team.
-//
-// Default: any
-//
-yb_join_team "any"
-
-//
-// Specifies bot "clan" tag, that displayed before his name.
-//
+// Specifies semicolon separated list of weapons that are not allowed to buy / pickup.
+// ---
 // Default: ""
-//
-yb_name_prefix ""
-
-
-//
-// Controls what latency will be shown in scoreboard for bots.
 // 
-// Available values:
-//  0 - Nothing is displayed.
-//  1 - "BOT" latency is displayed.
-//  2 - Simulating human latency.
-//
-yb_latency_display "2"
+yb_restricted_weapons "shield"
 
 //
-// Allows or disallows bots text-chat.
-//
-// Default: 1
-//
+// Enables or disables bots chat functionality.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
 yb_chat "1"
 
 //
-// Controls the password to access bot command and menus, when connected to server running yapb.
-//
-// Default: thebot
-//
-// Notes: Change this, if you going to run bots on dedicated server.
-//
-yb_password "thebot"
+// Specifies whether bots able to fire at enemies behind the wall, if they hearing or suspecting them.
+// ---
+// Default: "2", Min: "0", Max: "3"
+// 
+yb_shoots_thru_walls "2"
 
 //
-// Setinfo password key, that holds yb_password on client, to access bot commands and menus, when connected to server
-// running yapb.
-//
-// Default: _ybpw
-//
-// Usage:
-//   setinfo _ybpw thebot  - You will be able to access bot's menu in commands remotely.
-//
-yb_password_key "_ybwp"
+// Enables or disables searching world for enemies.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_ignore_enemies "0"
 
 //
-// Small welcome message on first round, showing version and build of the bot.
-//
-// Default: 1
-//
-yb_listenserver_welcome "1"
+// Enables or disables checking enemy rendering flags. Useful for some mods.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_check_enemy_rendering "0"
 
 //
-// Specifies host, that contains dozen of waypoint files. Host must contain subdirectory /wpdb/ which contains all the waypoints.
-//
-// Default; yapb.jeefo.net
-//
-yb_waypoint_autodl_host "yapb.jeefo.net"
+// Enables or disables checking enemy invincibility. Useful for some mods.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_check_enemy_invincibility "0"
 
 //
-// Allows or disallows bot to download waypoints from autodl_host.
-//
-// Default: 1
-//
-// Notes: This may freeze game loading process for a few seconds, as download done in main thread.
-//
-yb_waypoint_autodl_enable "1"
+// Enables or disables bot ability to stab the enemy with knife if bot is in good condition.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_stab_close_enemies "1"
 
 //
-// Language that used to display menus and messages from bot dll.
+// Bind's specified key for opening bots menu.
+// ---
+// Default: "="
+// 
+yb_bind_menu_key "="
+
 //
-// Default: en
+// Specifies comma separated list of bot cvars, that will not be overriten by config on changelevel.
+// ---
+// Default: "yb_quota,yb_autovacate"
+// 
+yb_ignore_cvars_on_changelevel "yb_quota,yb_autovacate"
+
 //
+// Enables or disables display menu text, when players asks for menu. Useful only for Android.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_display_menu_text "1"
+
+//
+// The value (password) for the setinfo key, if user set's correct password, he's gains access to bot commands and menus.
+// ---
+// Default: ""
+// 
+yb_password ""
+
+//
+// The name of setinfo key used to store password to bot commands and menus.
+// ---
+// Default: "_ybpw"
+// 
+yb_password_key "_ybpw"
+
+//
+// Enables or disables CSDM / FFA mode for bots.
+//  Allowed values: '0', '1', '2', '3'.
+//  If '0', CSDM / FFA mode is auto-detected.
+//  If '1', CSDM mode is enabled, but FFA is disabled.
+//  If '2' CSDM and FFA mode is enabled.
+//  If '3' CSDM and FFA mode is disabled.
+// ---
+// Default: "0", Min: "0", Max: "3"
+// 
+yb_csdm_mode "0"
+
+//
+// Specifies whether bot should not 'fix' camp directions of camp waypoints when loading old PWF format.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_graph_fixcamp "1"
+
+//
+// Specifies the URL from bots will be able to download graph in case of missing local one. Set to empty, if no downloads needed.
+// ---
+// Default: "yapb.ru"
+// 
+yb_graph_url "graph.yapb.ru"
+
+//
+// Kick bots to automatically make room for human players.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_autovacate "1"
+
+//
+// Specifies the number bots to be added to the game.
+// ---
+// Default: "9", Min: "0", Max: "32"
+// 
+yb_quota "0"
+
+//
+// Specifies the type of quota.
+//  Allowed values: 'normal', 'fill', and 'match'.
+//  If 'fill', the server will adjust bots to keep N players in the game, where N is yb_quota.
+//  If 'match', the server will maintain a 1:N ratio of humans to bots, where N is yb_quota_match.
+// ---
+// Default: "normal"
+// 
+yb_quota_mode "normal"
+
+//
+// Number of players to match if yb_quota_mode set to 'match'
+// ---
+// Default: "0", Min: "0", Max: "32"
+// 
+yb_quota_match "0"
+
+//
+// Specifies how many times per second bot code will run.
+// ---
+// Default: "30.0", Min: "30.0", Max: "90.0"
+// 
+yb_think_fps "30.0"
+
+//
+// Specifies amount of time in seconds when bots will be killed if no humans left alive.
+// ---
+// Default: "0.0", Min: "0.0", Max: "90.0"
+// 
+yb_autokill_delay "0.0"
+
+//
+// Specifies whether bots should join server, only when at least one human player in game.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_join_after_player "0"
+
+//
+// Forces all bots to join team specified here.
+// ---
+// Default: "any"
+// 
+yb_join_team "any"
+
+//
+// Specifies after how many seconds bots should start to join the game after the changelevel.
+// ---
+// Default: "5.0", Min: "0.0", Max: "30.0"
+// 
+yb_join_delay "5.0"
+
+//
+// All the bot names will be prefixed with string specified with this cvar.
+// ---
+// Default: ""
+// 
+yb_name_prefix ""
+
+//
+// All bots difficulty level. Changing at runtime will affect already created bots.
+// ---
+// Default: "4", Min: "0", Max: "4"
+// 
+yb_difficulty "4"
+
+//
+// Lower bound of random difficulty on bot creation. Only affects newly created bots. -1 means yb_difficulty only used.
+// ---
+// Default: "-1", Min: "-1", Max: "4"
+// 
+yb_difficulty_min "-1"
+
+//
+// Upper bound of random difficulty on bot creation. Only affects newly created bots. -1 means yb_difficulty only used.
+// ---
+// Default: "-1", Min: "-1", Max: "4"
+// 
+yb_difficulty_max "-1"
+
+//
+// Enables each bot balances own difficulty based kd-ratio of team.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_difficulty_auto "0"
+
+//
+// Enables or disabels displaying bot avatars in front of their names in scoreboard. Note, that is currently you can see only avatars of your steam friends.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_show_avatars "0"
+
+//
+// Enables latency display in scoreboard.
+//  Allowed values: '0', '1', '2'.
+//  If '0', there is nothing displayed.
+//  If '1', there is a 'BOT' is displayed.
+//  If '2' fake ping is displayed.
+// ---
+// Default: "2", Min: "0", Max: "2"
+// 
+yb_show_latency "1"
+
+//
+// Specifies the bots wanted skin for Terrorist team.
+// ---
+// Default: "0", Min: "0", Max: "5"
+// 
+yb_botskin_t "0"
+
+//
+// Specifies the bots wanted skin for CT team.
+// ---
+// Default: "0", Min: "0", Max: "5"
+// 
+yb_botskin_ct "0"
+
+//
+// Lower bound for base bot ping shown in scoreboard upon creation.
+// ---
+// Default: "7", Min: "0", Max: "100"
+// 
+yb_ping_base_min "7"
+
+//
+// Upper bound for base bot ping shown in scoreboard upon creation.
+// ---
+// Default: "34", Min: "0", Max: "100"
+// 
+yb_ping_base_max "34"
+
+//
+// Specifies the language for bot messages and menus.
+// ---
+// Default: "en"
+// 
 yb_language "en"
 
 //
-// Bot difficulty. As it-is.
-//
-// Default: 4
-//
-yb_difficulty "0"
+// Enables or disables extra hard difficulty for bots.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_whose_your_daddy "0"
 
 //
-// Amount of bots to add. Adding many bots will use more cpu. Start with a few bots, then add more if needed.
-//
-// Default: 9
-//
-yb_quota "9"
+// Selects the heuristic function mode. For debug purposes only.
+// ---
+// Default: "0", Min: "0", Max: "4"
+// 
+yb_debug_heuristic_type "0"
 
 //
-// Binds "=" key to open bot's main menu
-//
-bind "=" "yb menu"
+// Enables or disables showing welcome message to host entity on game start.
+// ---
+// Default: "1", Min: "0", Max: "1"
+// 
+yb_display_welcome_text "1"
 
 //
-// Bot not camper
+// Enables or disables fake server queries response, that shows bots as real players in server browser.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_enable_query_hook "0"
+
 //
-yb_camping_allowed 0
+// Allows or disallows bots to attack monsters.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_attack_monsters "0"
+
+//
+// Allows or disallows bots to pickup custom items.
+// ---
+// Default: "0", Min: "0", Max: "1"
+// 
+yb_pickup_custom_items "1"
