--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/chs_lang.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/chs_lang.cfg
@@ -1,9 +1,11 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
-//
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+;
+; @package: YaPB
+; @version: 4.0
+; @author: YaPB Development Team
+; @filename: chs_lang.cfg
+; 
+; Configuration file contains Simplified Chinese translation for bots menus and messages.
+;
 
 [ORIGINAL]
 \yMain Menu\w
@@ -135,7 +137,7 @@
 2. Average
 3. Normal
 4. Professional
-5. Godlike
+5. Expert
 
 0. Exit
 
