--- a/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/de_chat.cfg
+++ b/jni/cs16/3rdparty/extras/addons/yapb/conf/lang/de_chat.cfg
@@ -1,9 +1,11 @@
-// ------------------------------------------------------------------------
-// This file is part of Yet Another Ping Of Death Bot Configuration Files.
-// Copyright (c) 2003-2015, by YaPB Development Team.
-//
-// Please check out the documentation, before altering config files.
-// ------------------------------------------------------------------------
+;
+; @package: YaPB
+; @version: 4.0
+; @author: YaPB Development Team
+; @filename: de_chat.cfg
+; 
+; Configuration file contains German translation for bot chats.
+;
 
 [BOMBPLANT]
 Jeeesuzzz, nicht schon wieder !
